--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "bootstrap": "^4.5.0",
     "date-fns": "^2.15.0",
     "node-sass": "^4.14.1",
+    "pigeon-maps": "^0.15.0",
+    "pigeon-marker": "^0.3.4",
+    "pigeon-overlay": "^0.2.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
